test/fail/templatemarkdown.app
//Template with signature
//not defined
application test 

// Should also typecheck a shorthand name

define page root() {

  nav(3)

}
